# LangServe-HuggingfacePipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
